--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -1,12 +1,3 @@
-# Nome do Workflow
-name: DevOpsLab Pipeline
-
-# Evento que irá acionar a pipeline
-on: 
-  push:
-    branches:
-      - main
-
 jobs:
   Build:
     runs-on: ubuntu-latest
@@ -18,30 +9,62 @@ jobs:
       - name: Setup Python
         uses: actions/setup-python@v2
         with:
-          python-version: '3.10'
+          python-version: '3.7.11'
 
       - name: Install Requirements
         run:  pip install flask
 
+      - name: Install Requirements
+        run:  pip install flask pytest flask-wtf
+
       - name: Unit Test
         run: python -m unittest -v test
 
-      - name: Login to Heroku Container registry
-        env: 
-          HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
-        run: heroku container:login
-
-      - name: Build and Push
+  SonarCloud:
+    name: SonarCloud
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
+      - name: SonarCloud Scan
+        uses: SonarSource/sonarcloud-github-action@master
         env:
-          HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
-        run: heroku container:push -a ${{ secrets.HEROKU_APP_NAME }} web
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
   Deploy:
-    needs: Build
+    needs: [Build,SonarCloud]
     runs-on: ubuntu-latest
 
     steps:
-      - name: Deploy Heroku
+      - name: Checkout Repo
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+
+      # Autenticação do Heroku CLI via API TOKEN
+      # https://devcenter.heroku.com/articles/authentication
+      - name: Heroku Login
+        run: | 
+            cat > ~/.netrc <<EOF
+              machine api.heroku.com
+                login $HEROKU_EMAIL
+                password $HEROKU_API_KEY
+              machine git.heroku.com
+                login $HEROKU_EMAIL
+                password $HEROKU_API_KEY
+            EOF
         env:
-          HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
-        run: heroku container:release -a ${{ secrets.HEROKU_APP_NAME }} web
+            HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
+            HEROKU_EMAIL: ${{ secrets.HEROKU_EMAIL }}
+
+      # Adicionando o Repositório Remoto do Heroku para poder enviar o código da app
+      - name: Add Heroku Remote
+        run: heroku git:remote --app $HEROKU_APP_NAME
+        env:
+            HEROKU_APP_NAME: ${{ secrets.HEROKU_APP_NAME }}
+
+      # Enviando o código da App para o Heroku fazer Deploy
+      - name: Push to Heroku & Deploy
+        run: git push heroku HEAD:main --force
